# Rocket-Avionics

./: .git_old  .project  README.md  convert_bin.py  data.csv  messages.txt  read_flash.py
SEB/: .cproject  .mxproject  README.md  SEB Debug.launch  SEB.ioc
apogee-detection/: AD.cpp  CMakeLists.txt  Kalman_rocket_apogee.cpp  Makefile  README.md  a_x_data_new.txt  a_x_data_old.txt  apogee-functions.c  apogee-functions.h  apogee-task.c  apogee-task.h  bindings.cpp  comp-formulas-example  flight_summary.txt  height_data_new.txt  height_data_old.txt  noise-generator.cpp  noise_generator.cpp  noise_generator.hpp  pyproject.toml  real-time-height.py  redirect.txt  speed_LUT.h  temp-header.h  testing-library.py  threaded-real-time-pressure.py
apogee_detection/: temp
bayboard-firmware/: .cproject  .gitignore  .project  README.md  bayboard-firmware Debug.launch  bayboard-firmware.ioc  eeprom-bin-generate.py  tftp-recv.py
board-drivers/: README.md
camera-firmware/: README.md
drivers/: .project  README.md
droptest-firmware/: .cproject  .mxproject  .project  README.md  data.csv  droptest-firmware Debug.launch  droptest-firmware.ioc
flight-autosequence/: autosequence-script.c  autosequence-script.h  complementary-filter.c  complementary-filter.h  limestone-interface.h  main.c  plot_autosequence.sh  plot_graphs.sh  run_test.sh  state-machine.h
h7-eth-template/: README.md
keylime-firmware/: .cproject  README.md  keylime-firmware.ioc
limestone-firmware/: .cproject  .mxproject  .project  README.md  convert_bin.py  data.csv  eeprom-bin-generate.py  ntp-broadcast.py  (+4 more)
(+1623 files in other folders)
